Prod-EU/force-app/main/default/objects/CRM_Error_Event__e/CRM_Error_Event__e.object-meta.xml
<CustomObject>
    <label>CRM Error Event</label>
    <pluralLabel>CRM Error Events</pluralLabel>
</CustomObject>