Prod-EU/force-app/main/default/objects/CRM_Error_Event__e/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <description>For now 500 as the fixed value</description>
    <label>code</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>