Prod-EU/force-app/main/default/objects/CRM_Error_Event__e/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>message</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>